k8s/istio/control-plane/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rpc-app
  namespace: app
spec:
  hosts:
    - "rpc.local" # if local, update /etc/hosts with a localhost entry matching the value here
  gateways:
    - rpc-app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rpc-app-service
            port:
              number: 8081

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hosts:
    - "prometheus.local" # if local, update /etc/hosts with a localhost entry matching the value here
  gateways:
    - rpc-app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-server
            port:
              number: 9090
